--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "^5.2.5",
     "dayjs": "^1.11.13",
     "marked": "^16.0.0",
+    "remark-smartypants": "^3.0.2",
     "sharp": "^0.33.5",
     "tailwindcss": "^4.1.5"
   },
