--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.2.5",
+    "astro-font": "^1.1.0",
     "dayjs": "^1.11.13",
     "marked": "^16.0.0",
     "remark-smartypants": "^3.0.2",
